--- a/index.html
+++ b/index.html
@@ -13,20 +13,17 @@
     <main>
 
         <div class="main-heading">
-           
-                    <h1>Send us a message</h1>
-                    <p>We usually respond in one business day</p>
+
+            <h1>Send us a message</h1>
+            <p>We usually respond in one business day</p>
 
         </div>
-
-
-        <!---------- FORM STARTS HERE ---------->
 
 
         <form action="#" method="post">
             <fieldset>
                 <legend>
-                    <h2>General Info</h2></legend>
+                    General Info</legend>
 
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="John Smith">
@@ -38,7 +35,7 @@
                 <input type="text" id="company" name="company" placeholder="Acme Inc.">
 
                 <label for="hear">
-                    <h3>How did you hear about us?</h3></label>
+                    How did you hear about us?</label>
                 <input type="text" id="hear" name="hear" placeholder="Event">
 
 
@@ -54,33 +51,33 @@
 
             <fieldset>
                 <legend>
-                    <h2>Project info</h2></legend>
+                    Project info</legend>
                 <h3>Which of our offerings interest you?</h3>
-                <input type="checkbox" name="offer1" value="lean branding">
-                <label for="offer1" id="offer">Lean Branding</label>
+                <input type="checkbox" name="offer1" id="offer1" value="lean branding">
+                <label for="offer1">Lean Branding</label>
 
-                <input type="checkbox" name="offer2" value="4week">
-                <label for="offer2" id="offer">4 Week MVP</label>
+                <input type="checkbox" name="offer2" id="offer2" value="4week">
+                <label for="offer2">4 Week MVP</label>
 
-                <input type="checkbox" name="offer3" value="pteam">
-                <label for="offer3" id="offer">Product Team</label>
+                <input type="checkbox" name="offer3" id="offer3" value="pteam">
+                <label for="offer3">Product Team</label>
 
-                <input type="checkbox" name="offer4" value="dsprint">
-                <label for="offer4" id="offer">Design Sprint</label>
+                <input type="checkbox" name="offer4" id="offer4" value="dsprint">
+                <label for="offer4">Design Sprint</label>
 
-                <input type="checkbox" name="offer4" value="other">
-                <label for="offer5" id="offer">Other</label>
+                <input type="checkbox" name="offer5" id="offer5" value="other">
+                <label for="offer5">Other</label>
 
-                <label for="problem">
-                    <h3>What is the problem you are trying to solve?</h3></label>
-                <textarea id="problem" name="problem" rows="10" cols="90%" placeholder=""></textarea>
+                <label for="problem">What is the problem you are trying to solve?</label>
+                <textarea id="problem" name="problem" rows="10" cols="90" placeholder=""></textarea>
 
-                
-                <label for="problem"> <h3>What is the problem you are trying to solve?</h3></label>
-                <textarea id="problem" name="problem" rows="10" cols="90%" placeholder=""></textarea>
 
-                <legend>
-                    <h3>What is your budget range?</h3></legend>
+
+                <label for="accomplish">What do you hope our engagement will accomplish?</label>
+                <textarea id="accomplish" name="accomplish" rows="10" cols="90" placeholder=""></textarea>
+
+                <h3>
+                    What is your budget range?</h3>
 
                 <input type="radio" name="budget" id="less40">
                 <label for="less40">Less than 40k</label>
@@ -88,17 +85,19 @@
                 <input type="radio" name="budget" id="40to100">
                 <label for="40to100">40k – 100k</label>
 
-                <input type="radio" name="budget" id="40to100">
+                <input type="radio" name="budget" id="100to250">
                 <label for="100to250">100k – 250k</label>
 
-                <input type="radio" name="budget" id="40to100">
+                <input type="radio" name="budget" id="250to500">
                 <label for="250to500">250k – 500k</label>
 
-                <input type="radio" name="budget" id="40to100">
+                <input type="radio" name="budget" id="500plus">
                 <label for="500plus">500k+</label>
 
 
             </fieldset>
+
+
 
             <input type="submit" value="Submit">
         </form>
