Assignment 6 to submit

--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 
                 <input type="checkbox" name="offer5" id="offer5" value="other">
                 <label for="offer5">Other</label>
+           
 
-                <label for="problem">What is the problem you are trying to solve?</label>
+                <label class="clearfix" for="problem">What is the problem you are trying to solve?</label>
                 <textarea id="problem" name="problem" rows="10" cols="90" placeholder=""></textarea>
 
 
